--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vladvinitskiy.github.io/reactagram/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.5"
@@ -11,6 +13,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
